# Signingtool

./: Cargo.toml  README.md
examples/: SignBootImage.rs  SignUpdateImage.rs  test.rs
src/: constants.rs  fitsigner.rs  lib.rs  signatures.rs  signer.rs
