[package]
name = "rbsigner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 ="0.10"
p256 = {version = "0.10.1", default-features = false, features = ["ecdsa-core"]}
rand = "0.8.5"
as-slice = "0.2.1"
signature = {version = "1.3.1", default-features = false, features = ["digest-preview"]}

[features]
default = ["nistp256"]
nistp256 = ["p256/ecdsa"]









