[package]
name = "rbsigner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# sha2 ="0.10"
sha2 = {version = "0.9.9", default-features = false}
p256 = {version = "0.10.1", default-features = false, features = ["ecdsa-core"]}
rand = "0.8.5"
as-slice = "0.2.1"
signature = {version = "1.3.1", default-features = false, features = ["digest-preview"]}
filetime = "0.2"

[features]
default = ["nistp256"]
nistp256 = ["p256/ecdsa"]









